--- a/svelte-ui/src/app.css
+++ b/svelte-ui/src/app.css
@@ -16,6 +16,7 @@
     padding-left: 30px; 
     padding-top: 10px; 
     font-size: 60px;
+    font-weight: bold;
   }
 
 .navbar-styling {
@@ -24,3 +25,4 @@
     padding-top: 20px; 
     padding-bottom: 20px;
 }
+
