--- a/svelte-ui/src/app.css
+++ b/svelte-ui/src/app.css
@@ -1,33 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Anta&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kode+Mono:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anta&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kode+Mono:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .view-all-link {
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 20px;
-    background-color: #A8E3E3;
-    color: white;
-    border-radius: 5px;
-  }
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 20px;
+  background-color: #a8e3e3;
+  color: white;
+  border-radius: 5px;
+}
 
 .header {
-    padding-left: 30px; 
-    padding-top: 10px; 
-    font-size: 60px;
-    font-weight: bold;
-  }
+  padding-left: 30px;
+  padding-top: 10px;
+  font-size: 60px;
+  font-weight: bold;
+}
 
 .navbar-styling {
-    padding-left: 50px; 
-    padding-right: 50px; 
-    padding-top: 20px; 
-    padding-bottom: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .blueFont {
-  color: #266D85;
+  color: #266d85;
 }
 
 .overlay {
@@ -58,11 +58,4 @@
   width: 2em;
   height: 2em;
   border-radius: 2em;
-  border: 1px solid #FFFFFF;
 }
-
-
-
-
-
-
